Get library code lists directly without configuring provider and option id (#1593)
* Started implementing new way of getting library code lists, needs work

* Refactored Altinn 3 library code lists and added mapping for tags

* Added tags support to `AppOption` and updated library code list handling

* Cleanup, changed from using FluentAssertion to xunit assert in OptionsControllerTests

* Fixed warnings in OptionsControllerTests

* Fixed warnings

* Implemented suggested changes by code rabbit

* Implemented code rabbits suggested changes

* Implemented suggested changes from code rabbit

* Implemented suggested changes

* Implemented suggested changes

* Finalized ADR, changed endpoint to suit ADR decision, added unit tests for options instance controller method.

* Implemented suggested changes from Code Rabbit.

* Implemented suggested changes from Code Rabbit

* Implemented suggested change from Code Rabbit.

* Implemented suggested changes by Code Rabbit

* Fixed warnings

* Implemented suggested changes from Code Rabbit

* Removed json igore from label in appOptions.

* Implemented suggested changes from code rabbit

* Implemented suggested changes from Code Rabbit and improved ADR

* Improved ADR

* Implemented suggested changed from Code Rabbit

* Implemented suggested change from code rabbit

* Improved ADR and comment

* Implemented suggested changes from Code Rabbit.

* Implemented suggested changes from Code Rabbit

* Improved method names and comments and fixed unit test

* Fixed unit test

* Fixed unit tests and improved ADR

* Implemented suggested change by Code Rabbit

* Implemented suggested changed from Code Rabbit.

* Minor improvements

* Improved unit tests

* Implemented suggested change from Code Rabbit

* Implemented suggested changes

* Cleanup

* Formatting

* Implemented suggested changes

* Fixed unit test
